--- a/templates/base.html
+++ b/templates/base.html
@@ -37,6 +37,9 @@ $(document).ready(function() {
 	// jQuery code
 
 }); 
+setTimeout(function() {
+    $('#message').fadeOut('slow')
+}, 3000);
 // jquery end
 </script>
 
