--- a/templates/base.html
+++ b/templates/base.html
@@ -29,6 +29,9 @@
 <!-- custom javascript -->
 <script src="{% static 'js/script.js' %}" type="text/javascript"></script>
 
+{% comment %} Paypal Script {% endcomment %}
+<script src="https://www.paypal.com/sdk/js?client-id=AYUkG70U0oU2T1NoBa1IYal5-nLO2WZFBvGjdjDhZwiBQkQz_gLJjt7D3E7FEVra0O10DvnZGLGVrXF2&currency=USD"></script>
+
 <script type="text/javascript">
 /// some script
 
