--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -6,7 +6,7 @@
 <section class="section-content padding-y bg">
     <div class="container">
         <!-- ============================ COMPONENT 1 ================================= -->
-        <form action="" method="POST">
+        <form action="{% url 'place_order' %}" method="POST">
             {% csrf_token %}
             <div class="row">
                 <aside class="col-lg-6">
@@ -30,7 +30,7 @@
                                 </div>
                                 <div class="col form-group">
                                     <label for="">Phone Number</label>
-                                    <input type="text" name="phone_number" class="form-control" required>
+                                    <input type="text" name="phone" class="form-control" required>
                                 </div>
                             </div>
                             <div class="form-row">
