--- a/templates/store/product_detail.html
+++ b/templates/store/product_detail.html
@@ -24,6 +24,19 @@
       <div class="mb-3"> 
           <var class="price h4">${{ product.price }}</var> 
       </div> 
+      <div>
+        <div class="rating-star">
+            <span>
+                <i class="fa fa-star{% if product.averageReview < 0.5 %}-o{% elif product.averageReview >= 0.5 and product.averageReview < 1 %}-half-o{% endif %}" aria-hidden="true"></i>
+                <i class="fa fa-star{% if product.averageReview < 1.5 %}-o{% elif product.averageReview >= 1.5 and product.averageReview < 2 %}-half-o{% endif %}" aria-hidden="true"></i>
+                <i class="fa fa-star{% if product.averageReview < 2.5 %}-o{% elif product.averageReview >= 2.5 and product.averageReview < 3 %}-half-o{% endif %}" aria-hidden="true"></i>
+                <i class="fa fa-star{% if product.averageReview < 3.5 %}-o{% elif product.averageReview >= 3.5 and product.averageReview < 4 %}-half-o{% endif %}" aria-hidden="true"></i>
+                <i class="fa fa-star{% if product.averageReview < 4.5 %}-o{% elif product.averageReview >= 4.5 and product.averageReview < 5 %}-half-o{% endif %}" aria-hidden="true"></i>
+            </span>
+            ({{ product.countReview }})
+        </div>
+        <br>
+      </div>
       <p>{{ product.description }}</p>
       <hr>
           <div class="row">
@@ -68,38 +81,78 @@
     <br>
     
     <div class="row">
-                <div class="col-md-9">
-    
-        <header class="section-heading">
-            <h3>Customer Reviews </h3>  
-            
-        </header>
-    
-        <article class="box mb-3">
-            <div class="icontext w-100">
-                <img src="{% static './images/avatars/avatar1.jpg' %}" class="img-xs icon rounded-circle">
-                <div class="text">
-                    <span class="date text-muted float-md-right">24.04.2020 </span>  
-                    <h6 class="mb-1">Mike John </h6>
+        <div class="col-md-9">
+            <form action="{% url 'submit_review' product.id %}" method="POST">
+                {% csrf_token %}
+                <h5>Write Your Review</h5>
+                {% comment %} Rating starts {% endcomment %}
+                {% if user.is_authenticated %}
+                {% if is_order_product %}
+                <div>
+                    <label>How do you rate this product?</label>
+                    <br>
+                    <div class="rate">
+                        <input type="radio" name="rating" id="rating10" value="5"   required> <label for="rating10" title="5"   ></label>
+                        <input type="radio" name="rating" id="rating9"  value="4.5" required> <label for="rating9"  title="4.5" class="half" ></label>
+                        <input type="radio" name="rating" id="rating8"  value="4"   required> <label for="rating8"  title="4"   ></label>
+                        <input type="radio" name="rating" id="rating7"  value="3.5" required> <label for="rating7"  title="3.5" class="half" ></label>
+                        <input type="radio" name="rating" id="rating6"  value="3"   required> <label for="rating6"  title="3"   ></label>
+                        <input type="radio" name="rating" id="rating5"  value="2.5" required> <label for="rating5"  title="2.5" class="half" ></label>
+                        <input type="radio" name="rating" id="rating4"  value="2"   required> <label for="rating4"  title="2"   ></label>
+                        <input type="radio" name="rating" id="rating3"  value="1.5" required> <label for="rating3"  title="1.5" class="half" ></label>
+                        <input type="radio" name="rating" id="rating2"  value="1"   required> <label for="rating2"  title="1"   ></label>
+                        <input type="radio" name="rating" id="rating1"  value="0.5" required> <label for="rating1"  title="0.5" class="half" ></label>
+                    </div>
+                    <br>
+                    Review Title:
+                    <input type="text" class="form-control" name="subject">
+                    <br>
+                    Review:
+                    <textarea class="form-control" name="review" rows="4"></textarea>
+                    <br>
                     
+                    <input type="submit" class="btn btn-primary" value="Submit Review">
                 </div>
-            </div> <!-- icontext.// -->
-            <div class="mt-3">
-                <p>
-                    Dummy comment Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-                    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-                    quis nostrud exercitation ullamco laboris nisi ut aliquip
-                </p>	
-            </div>
-        </article>
-    
-        
-    
+                {% else %}
+                <p>You must purchase this product to write your review.</p>
+                {% endif %}
+                {% else %}
+                <p>You must be logged in to write your review! <span><a href="{% url 'login' %}">Login now</a></span> </p>
+                {% endif %}
+                <br>
+                {% include 'includes/alert.html' %}
+            </form>
+            <br>
+            <header class="section-heading">
+                <h3>Customer Reviews</h3>
+            </header>
+            {% for review in reviews %}
+            <article class="box mb-3">    
+                <div class="icontext w-100">
+                    <div class="text">
+                        <span class="date text-muted float-md-right">{{ review.updated_at }} </span>  
+                        <h6 class="mb-1">{{ review.user.username }} </h6>
+                        <div class="rating-star">
+                            <span>
+                                <i class="fa fa-star{% if product.averageReview == 0.5 %}-half-o{% elif product.averageReview < 1 %}-o{% endif %}" aria-hidden="true"></i>
+                                <i class="fa fa-star{% if product.averageReview == 1.5 %}-half-o{% elif product.averageReview < 2 %}-o{% endif %}" aria-hidden="true"></i>
+                                <i class="fa fa-star{% if product.averageReview == 2.5 %}-half-o{% elif product.averageReview < 3 %}-o{% endif %}" aria-hidden="true"></i>
+                                <i class="fa fa-star{% if product.averageReview == 3.5 %}-half-o{% elif product.averageReview < 4 %}-o{% endif %}" aria-hidden="true"></i>
+                                <i class="fa fa-star{% if product.averageReview == 4.5 %}-half-o{% elif product.averageReview < 5 %}-o{% endif %}" aria-hidden="true"></i>
+                            </span>
+                        </div>
+                    </div>
+                </div> <!-- icontext.// -->
+                <div class="mt-3">
+                    <h5>{{ review.subject }}</h5>
+                    <p>{{ review.review }}</p>	
+                </div>
+            </article> 
+            {% endfor %}
         </div> <!-- col.// -->
     </div> <!-- row.// -->
-    
-    
-    </div> <!-- container .//  -->
+</div> <!-- container .//  -->
 </section>
 <!-- ========================= SECTION CONTENT END// ========================= -->
 {% endblock content %}
+    
